Splitted into multi module project